Fixed bug in carousel editor not showing content
Fixed bug in carousel editor not showing all of the content because of the justify-content attribute

--- a/static/style/learnpage.css
+++ b/static/style/learnpage.css
@@ -402,7 +402,6 @@ body {
     display: flex;
     flex-direction: column;
     overflow: scroll;
-    justify-content: center;
     align-items: center;
     align-content: center;
     text-align: center;
